--- a/account/templates/account/top.html
+++ b/account/templates/account/top.html
@@ -80,6 +80,8 @@
     選ばれたアイディアについて深掘りすべき論点を複数設定し、その論点に対して議論を行い<span
     style="color: #ff0000; font-weight: bold"
     >精緻化</span>に入力しましょう。</br>
+    論点に対していくつかポジティブ、ネガティブな点を話し合い、話し合った結果どうなったのかをコメントの種類「結果」を選び入力して、
+    最後に質疑応答で指摘された場合どのように対応するか話し合い、内容をコメントの種類「対応」を選び入力しましょう。</br>
     この作業をすることで、アイディアのプレゼンテーションをするときに様々な質問に対して回答する準備ができます。</br>
     これが終わればアイディア発想は完了です!!! お疲れさまでした!
   </p>
