--- a/account/templates/account/top.html
+++ b/account/templates/account/top.html
@@ -12,7 +12,10 @@
     グループディスカッションにおける、アイディア発想や意思決定を支援します。</br>
     下記に示すステップに従い、議論を行ってみてください。
     グループで使用する場合は、書き込みを行う人は書記の役割を担っている人のみにしてください。</br>
-    (ログインしたユーザーに情報が紐づけられているので他のユーザー名でログインを行うと情報が見れません。)
+    (ログインしたユーザーに情報が紐づけられているので他のユーザー名でログインを行うと情報が見れません。)</br>
+    <span style="color: blue; font-weight: bold">(1/16 追記、同じユーザー名で複数ログイン、書き込み等の操作も自由に行えそう。</span>
+    表内の同じ要素を同時に扱うとエラー発生等あるかもしれませんのでエラー画面が出たらブラウザバックしてください。)</br>
+    それ以外でエラーが起きる場合は人為的ミスです。報告お願いします。
   </p>
 
   <h3>アイディア発想支援サイト使用の流れ</h3>
