--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -29,6 +29,9 @@
       #page-title {
         font-size: 20px;
       }
+      div p {
+        margin-left: 15px;
+      }
     </style>
   </head>
   <body>
