--- a/account/templates/account/top.html
+++ b/account/templates/account/top.html
@@ -10,10 +10,10 @@
   <h3>アイディア発想支援サイトとは</h3>
   <p>
     グループディスカッションにおける、アイディア発想や意思決定を支援します。</br>
-    下記に示すステップに従い、議論を行ってみてください。
-    グループで使用する場合は、書き込みを行う人は書記の役割を担っている人のみにしてください。</br>
-    (ログインしたユーザーに情報が紐づけられているので他のユーザー名でログインを行うと情報が見れません。)</br>
-    <span style="color: blue; font-weight: bold">(1/16 追記、同じユーザー名で複数ログイン、書き込み等の操作も自由に行えそう。</span>
+    下記に示すステップに従い、議論を行ってみてください。</br>
+    グループで使用する場合は、書き込みを行う人は書記の役割を担っている人のみにしてください。(訂正あり)</br>
+    (ログインしたユーザーに情報が紐づけられているので他のユーザー名でログインを行うと情報が見れません。)</br></br>
+    <span style="color: blue; font-weight: bold">(1/16 追記、同じユーザー名で複数ログイン、書き込み等の操作も自由に行えそう。</span></br>
     表内の同じ要素を同時に扱うとエラー発生等あるかもしれませんのでエラー画面が出たらブラウザバックしてください。)</br>
     それ以外でエラーが起きる場合は人為的ミスです。報告お願いします。
   </p>
@@ -23,8 +23,8 @@
   <p>
     前述したとおり、入力内容はユーザー情報に紐づけられるのでこのサイトの利用には会員登録及びログインが必要です。</br>
     <span style="color: goldenrod; font-weight: bold">ログインボタン</span>
-    は、パソコンの場合だと、上のバーに表示されていますが、スマホなどの小さな画面で表示する場合は、バー右端の
-    <span style="color: goldenrod; font-weight: bold">ハンバーガーメニュー(漢字の「三」のような形)</span>を押してください。ログイン後のページ移動も同様です。
+    は、パソコンの場合だと、上のバーに表示されていますが、スマホなどの小さな画面で表示する場合は、</br>
+    バー右端の<span style="color: goldenrod; font-weight: bold">ハンバーガーメニュー(漢字の「三」のような形)</span>を押してください。ログイン後のページ移動も同様です。
   </p>
 
   <h5>ステップ1 アイディア発想</h5>
@@ -44,7 +44,8 @@
 
   <h5>ステップ3 投票</h5>
   <p>
-    すべてのアイディアに対して評価基準に対する議論を行うことが難しい(例:時間が足りない)と考えられる場合、ここで多数決による投票を行い、絞り込みを行います。</br>
+    すべてのアイディアに対して評価基準に対する議論を行うことが難しい(例:時間が足りない)と考えられる場合、</br>
+    ここで多数決による投票を行い、絞り込みを行います。</br>
     メンバーに最もよい(=best)と思うものに１つ、次によい(=better)と思うものを1,2個選んでもらうようにしましょう。</br>
     メンバーのひとりはその結果を<span style="color: #ff0000; font-weight: bold">投票</span>に入力しましょう。</br>
     ※bestは2点、betterは1点換算されて結果の欄に出力されます。
@@ -83,7 +84,7 @@
     選ばれたアイディアについて深掘りすべき論点を複数設定し、その論点に対して議論を行い<span
     style="color: #ff0000; font-weight: bold"
     >精緻化</span>に入力しましょう。</br>
-    論点に対していくつかポジティブ、ネガティブな点を話し合い、話し合った結果どうなったのかをコメントの種類「結果」を選び入力して、
+    論点に対していくつかポジティブ、ネガティブな点を話し合い、話し合った結果どうなったのかをコメントの種類「結果」を選び入力して、</br>
     最後に質疑応答で指摘された場合どのように対応するか話し合い、内容をコメントの種類「対応」を選び入力しましょう。</br>
     この作業をすることで、アイディアのプレゼンテーションをするときに様々な質問に対して回答する準備ができます。</br>
     これが終わればアイディア発想は完了です!!! お疲れさまでした!
