--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -32,6 +32,9 @@
       div p {
         margin-left: 15px;
       }
+      .margin-left {
+        margin-left: 15px;
+      }
     </style>
   </head>
   <body>
@@ -55,7 +58,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'account:top' %}">ホーム</a>
+            <a class="nav-link" href="{% url 'account:top' %}">トップページ</a>
           </li>
           <!--ログインしていないときの表示-->
           {% if not user.is_authenticated %}
