--- a/idea/templates/idea/idea_list.html
+++ b/idea/templates/idea/idea_list.html
@@ -3,8 +3,8 @@
 <!--改行防ぎ-->
 {% block header %}
 <p>
-  <span id="page-title">アイディア一覧</span
-  >　　　アイディアを入力していきましょう
+  <span id="page-title">アイディア一覧</span>
+  　アイディアを入力していきましょう
 </p>
 
 <!--改行防ぎ-->
