--- a/account/templates/account/top.html
+++ b/account/templates/account/top.html
@@ -11,6 +11,9 @@
   <p>
     グループディスカッションにおける、アイディア発想や意思決定を支援します。</br>
     下記に示すステップに従い、議論を行ってみてください。</br>
+    <span style="color: #ff0000; font-weight: bold">
+    使用の流れは初めから完全に理解しようとしなくてもよいです。各ステップに進んだ際によく読んでください。()
+    </span></br>
     グループで使用する場合は、書き込みを行う人は書記の役割を担っている人のみにしてください。(訂正あり)</br>
     (ログインしたユーザーに情報が紐づけられているので他のユーザー名でログインを行うと情報が見れません。)</br></br>
     <span style="color: blue; font-weight: bold">(1/16 追記、同じユーザー名で複数ログイン、書き込み等の操作も自由に行えそう。</span></br>
@@ -27,7 +30,7 @@
     バー右端の<span style="color: goldenrod; font-weight: bold">ハンバーガーメニュー(漢字の「三」のような形)</span>を押してください。ログイン後のページ移動も同様です。
   </p>
 
-  <h5>ステップ1 アイディア発想</h5>
+  <h5 id="jump_idea">ステップ1 アイディア発想</h5>
   <p>
     <span style="color: #ff0000; font-weight: bold">アイディア発想</span
     >で発想されたアイディアを入力していきます。</br>
@@ -35,14 +38,14 @@
     よくわからない場合は、デフォルトで入力されている１のままにしてください。</br>
   </p>
 
-  <h5>ステップ2 評価基準の設定</h5>
+  <h5 id="jump_standard">ステップ2 評価基準の設定</h5>
   <p>
     <span style="color: #ff0000; font-weight: bold">評価基準</span
     >でアイディア発想で発想されたアイディアの評価基準を設定します。</br>
     評価基準は3つ程度設定しましょう。
   </p>
 
-  <h5>ステップ3 投票</h5>
+  <h5 id="jump_vote">ステップ3 投票</h5>
   <p>
     すべてのアイディアに対して評価基準に対する議論を行うことが難しい(例:時間が足りない)と考えられる場合、</br>
     ここで多数決による投票を行い、絞り込みを行います。</br>
@@ -52,7 +55,7 @@
     アイディアの数によりますが、得点上位5個を目安に絞り込みましょう。
   </p>
 
-  <h5>ステップ4 評価マトリクスの作成</h5>
+  <h5 id="jump_matrix">ステップ4 評価マトリクスの作成</h5>
   <p>
     アイディアに対して評価基準をもとに議論を行い、<span style="color: #ff0000; font-weight: bold"
     >評価マトリクス</span>に入力しましょう。</br>
@@ -64,7 +67,7 @@
     >を選択して入力してください。
   </p>
 
-  <h5>ステップ5 統括的分析</h5>
+  <h5 id="jump_refine">ステップ5 統括的分析</h5>
   <p>
     納得のいくアイディアが決まった場合はアイディアの<span
       style="color: #ff0000; font-weight: bold"
@@ -76,7 +79,7 @@
     >に進みましょう。
   </p>
 
-  <h5>ステップ6-A アイディアの精緻化</h5>
+  <h5 id="jump_refine2">ステップ6-A アイディアの精緻化</h5>
   <p>
     アイディアの<span
     style="color: #ff0000; font-weight: bold"
@@ -89,7 +92,7 @@
     この作業をすることで、アイディアのプレゼンテーションをするときに様々な質問に対して回答する準備ができます。</br>
     これが終わればアイディア発想は完了です!!! お疲れさまでした!
   </p>
-  <h5>ステップ6-B-1 アイディアの振り返り</h5>
+  <h5 id="jump_reflect">ステップ6-B-1 アイディアの振り返り</h5>
   <p>
     アイディアの<span
     style="color: #ff0000; font-weight: bold"
@@ -99,7 +102,7 @@
     >コメントタイプ</span>(ポジティブ、ネガティブ)を選択し、コメントを入力しましょう。</br>
     最後は、コメントを見返し、どこに問題があったのか問題点を下の表に入力しましょう。
   </p>
-  <h5>ステップ6-B-2 再試行の設計</h5>
+  <h5 id="jump_retry">ステップ6-B-2 再試行の設計</h5>
   <p>
     アイディアの振り返りで浮かび上がった問題点を解消にするにはどのように再試行を行えばよいか議論し、<span
     style="color: #ff0000; font-weight: bold"
