--- a/idea/templates/idea/v_list.html
+++ b/idea/templates/idea/v_list.html
@@ -4,6 +4,11 @@
 <p>
   <span id="page-title">アイディア投票</span
   >　　　メンバーはそれぞれ、発想されたアイディアに対し、bestを１つ、betterを一つか二つ選び、投票を押して記録しましょう
+  <a 
+  class="btn btn-secondary"
+  href="{% url 'account:top'%}#jump_vote"
+  role="button"
+  >ヘルプ</a>
 </p>
 {% endblock header %} {% block content %} {% load math_tags %}
 <div class="container">
