--- a/refine/templates/refine/list.html
+++ b/refine/templates/refine/list.html
@@ -6,7 +6,12 @@
 {% block header %}
 <p>
   <span id="page-title">アイディアの精緻化</span>
-  　アイディアに対して指摘されそうなことを話し合い、論点を定めましょう　そして、優先順位に従い、論点について議論を行いメモを入力しましょう
+  　アイディアに対して指摘されそうなことを話し合い、論点を定めましょう　そして、優先順位に従い、論点について議論を行いメモを入力しましょう 
+  <a
+  class="btn btn-secondary"
+  href="{% url 'account:top' %}#jump_refine2"
+  role="button"
+  >ヘルプ</a
 </p>
 {% endblock header%} {% block content %}
 
