--- a/matrix/templates/matrix/list.html
+++ b/matrix/templates/matrix/list.html
@@ -7,6 +7,11 @@
 <p>
   <span id="page-title">アイディア評価マトリクス</span>
   　　　アイディアに対して、評価基準をもとに議論を行い内容を入力しましょう。
+  <a
+  class="btn btn-secondary"
+  href="{% url 'account:top' %}#jump_matrix"
+  role="button"
+  >ヘルプ</a
 </p>
 {% endblock header %} {% block content %}
 
