--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -29,11 +29,20 @@
       #page-title {
         font-size: 20px;
       }
+      /*左側のスペースを作る*/
       div p {
         margin-left: 15px;
       }
       .margin-left {
         margin-left: 15px;
+      }
+      /*トップページの行間調整*/
+      .top-line-height {
+        line-height: 200%;
+      }
+      /*表の帯の色*/
+      .thead-color {
+        background-color: silver;
       }
     </style>
   </head>
