--- a/account/templates/account/top.html
+++ b/account/templates/account/top.html
@@ -1,18 +1,19 @@
 {% extends 'account/base.html' %}
 <!--このコメント消さないで!バグるよ!!!-->
 {% block title %}<title>トップページ</title> {% endblock title %} {% block header %}
-<span id="page-title">トップページ</span>
+<p><span id="page-title">トップページ</span></p>
 {% endblock header%}
 <!-- コンテンツ -->
 {% block content %}
 
+<div class="top-line-height">
 <div class="container" style="background-color: #f0f8ff">
-  <h3>アイディア発想支援サイトとは</h3>
+  <h3>アイディア発想支援サイトとは</h3><hr>
   <p>
-    グループディスカッションにおける、アイディア発想や意思決定を支援します。</br>
+    グループディスカッションにおける、アイディア発想や意思決定を支援します。
     下記に示すステップに従い、議論を行ってみてください。</br>
     <span style="color: #ff0000; font-weight: bold">
-    使用の流れは初めから完全に理解しようとしなくてもよいです。各ステップに進んだ際によく読んでください。()
+    使用の流れは初めから完全に理解しようとしなくてもよいです。各ステップに進んだ際によく読んでください。(各ページにヘルプボタンがあります) 
     </span></br>
     グループで使用する場合は、書き込みを行う人は書記の役割を担っている人のみにしてください。(訂正あり)</br>
     (ログインしたユーザーに情報が紐づけられているので他のユーザー名でログインを行うと情報が見れません。)</br></br>
@@ -21,19 +22,19 @@
     それ以外でエラーが起きる場合は人為的ミスです。報告お願いします。
   </p>
 
-  <h3>アイディア発想支援サイト使用の流れ</h3>
+  <h3>アイディア発想支援サイト使用の流れ</h3><hr>
   <h5>ステップ0 ログイン</h5>
   <p>
     前述したとおり、入力内容はユーザー情報に紐づけられるのでこのサイトの利用には会員登録及びログインが必要です。</br>
     <span style="color: goldenrod; font-weight: bold">ログインボタン</span>
-    は、パソコンの場合だと、上のバーに表示されていますが、スマホなどの小さな画面で表示する場合は、</br>
+    は、パソコンの場合だと、上のバーに表示されていますが、スマホなどの小さな画面で表示する場合は、
     バー右端の<span style="color: goldenrod; font-weight: bold">ハンバーガーメニュー(漢字の「三」のような形)</span>を押してください。ログイン後のページ移動も同様です。
   </p>
 
   <h5 id="jump_idea">ステップ1 アイディア発想</h5>
   <p>
     <span style="color: #ff0000; font-weight: bold">アイディア発想</span
-    >で発想されたアイディアを入力していきます。</br>
+    >で発想されたアイディアを入力していきます。
     PDCAサイクルを回した際にメモできるように試行回数を入力する欄があります。</br>
     よくわからない場合は、デフォルトで入力されている１のままにしてください。</br>
   </p>
@@ -41,16 +42,16 @@
   <h5 id="jump_standard">ステップ2 評価基準の設定</h5>
   <p>
     <span style="color: #ff0000; font-weight: bold">評価基準</span
-    >でアイディア発想で発想されたアイディアの評価基準を設定します。</br>
+    >でアイディア発想で発想されたアイディアの評価基準を設定します。
     評価基準は3つ程度設定しましょう。
   </p>
 
   <h5 id="jump_vote">ステップ3 投票</h5>
   <p>
-    すべてのアイディアに対して評価基準に対する議論を行うことが難しい(例:時間が足りない)と考えられる場合、</br>
-    ここで多数決による投票を行い、絞り込みを行います。</br>
-    メンバーに最もよい(=best)と思うものに１つ、次によい(=better)と思うものを1,2個選んでもらうようにしましょう。</br>
-    メンバーのひとりはその結果を<span style="color: #ff0000; font-weight: bold">投票</span>に入力しましょう。</br>
+    すべてのアイディアに対して評価基準に対する議論を行うことが難しい(例:時間が足りない)と考えられる場合、
+    多数決による投票で絞り込みを行います。</br>
+    メンバーに最もよい(=best)と思うものに１つ、次によい(=better)と思うものを1,2個選んでもらうようにしましょう。
+    その結果を<span style="color: #ff0000; font-weight: bold">投票</span>に入力しましょう。</br>
     ※bestは2点、betterは1点換算されて結果の欄に出力されます。
     アイディアの数によりますが、得点上位5個を目安に絞り込みましょう。
   </p>
@@ -87,7 +88,7 @@
     選ばれたアイディアについて深掘りすべき論点を複数設定し、その論点に対して議論を行い<span
     style="color: #ff0000; font-weight: bold"
     >精緻化</span>に入力しましょう。</br>
-    論点に対していくつかポジティブ、ネガティブな点を話し合い、話し合った結果どうなったのかをコメントの種類「結果」を選び入力して、</br>
+    論点に対していくつかポジティブ、ネガティブな点を話し合い、話し合った結果どうなったのかをコメントの種類「結果」を選び入力します。</br>
     最後に質疑応答で指摘された場合どのように対応するか話し合い、内容をコメントの種類「対応」を選び入力しましょう。</br>
     この作業をすることで、アイディアのプレゼンテーションをするときに様々な質問に対して回答する準備ができます。</br>
     これが終わればアイディア発想は完了です!!! お疲れさまでした!
@@ -115,5 +116,6 @@
   <p>
     (例:ステップ1のアイディア発想からやり直す、ステップ4のアイディア評価マトリクスで追加アイディアを考える等)
   </p>
+</div>
 </div>
 {% endblock content %}
