--- a/idea/templates/idea/idea_list.html
+++ b/idea/templates/idea/idea_list.html
@@ -18,7 +18,7 @@
 
 <div class="container">
   <table class="table">
-    <thead style="background-color: aquamarine">
+    <thead class="thead-color">
       <tr>
         <th>アイディア</th>
         <th>説明</th>
