--- a/idea/templates/idea/v_list.html
+++ b/idea/templates/idea/v_list.html
@@ -13,7 +13,7 @@
 {% endblock header %} {% block content %} {% load math_tags %}
 <div class="container">
   <table class="table">
-    <thead style="background-color: aquamarine">
+    <thead class="thead-color">
       <tr>
         <th>アイディア</th>
         <th>bestの票</th>
