--- a/refine/templates/refine/list.html
+++ b/refine/templates/refine/list.html
@@ -20,7 +20,7 @@
     <caption>
       論点一覧
     </caption>
-    <thead style="background-color: aquamarine">
+    <thead class="thead-color">
       <tr>
         <th scope="col">論点</th>
         <th scope="col">優先順位</th>
@@ -69,7 +69,7 @@
     <caption>
       コメント
     </caption>
-    <thead style="background-color: aquamarine">
+    <thead class="thead-color">
       <tr>
         <th scope="col">論点</th>
         <th scope="col">コメントタイプ</th>
@@ -90,50 +90,12 @@
       <!--コメントタイプでif-->
       {% if issues.get_comment_type_display == 'ポジティブ' %}
       <tr class="table-warning">
-        <td>{{ issues.ref_issues }}</td>
-        <td>{{ issues.get_comment_type_display }}</td>
-        <td>{{ issues.comment_content}}</td>
-        <td>
-          <a
-            class="btn btn-outline-primary"
-            href="{% url 'refine:c_update' issues.pk %}"
-            role="button"
-            >コメント内容の編集</a
-          >
-        </td>
-        <td>
-          <a
-            class="btn btn-danger"
-            href="{% url 'refine:c_delete' issues.pk %}"
-            role="button"
-            >削除</a
-          >
-        </td>
-      </tr>
       {% elif issues.get_comment_type_display == 'ネガティブ' %}
-      <tr class="table-primary">
-        <td>{{ issues.ref_issues }}</td>
-        <td>{{ issues.get_comment_type_display }}</td>
-        <td>{{ issues.comment_content}}</td>
-        <td>
-          <a
-            class="btn btn-outline-primary"
-            href="{% url 'refine:c_update' issues.pk %}"
-            role="button"
-            >コメント内容の編集</a
-          >
-        </td>
-        <td>
-          <a
-            class="btn btn-danger"
-            href="{% url 'refine:c_delete' issues.pk %}"
-            role="button"
-            >削除</a
-          >
-        </td>
-      </tr>
+      <tr class="table-primary">  
       {% else %}
       <tr class="table-danger">
+      {% endif %}
+
         <td>{{ issues.ref_issues }}</td>
         <td>{{ issues.get_comment_type_display }}</td>
         <td>{{ issues.comment_content}}</td>
@@ -154,7 +116,7 @@
           >
         </td>
       </tr>
-      {% endif %}{% endfor %}
+     {% endfor %}
     </tbody>
   </table>
 </div>
