--- a/retry/templates/retry/list.html
+++ b/retry/templates/retry/list.html
@@ -21,7 +21,7 @@
     <caption>
       再試行の設計
     </caption>
-    <thead style="background-color: aquamarine">
+    <thead class="thead-color">
       <tr>
         <th scope="col">問題点</th>
         <th scope="col">再試行の内容</th>
