--- a/standard/templates/standard/list.html
+++ b/standard/templates/standard/list.html
@@ -15,7 +15,7 @@
 {% endblock header%}{% block content %}
 <div class="container">
   <table class="table">
-    <thead style="background-color: aquamarine">
+    <thead class="thead-color">
       <tr>
         <th scope="col">評価基準</th>
         <!--整形のためtbodyと要素数をそろえる-->
